# agent-generator

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test_connection.sh
.github/: CODEOWNERS
.github/workflows/: backend-image.yml  backend.yml  ci.yml  desktop.yml  docker-publish.yml  docs.yml  e2e.yml  frontend.yml  hf-space-pr.yml  hf-space.yml  mobile.yml  release-app.yml  release.yml
architecture/: index.html
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  logging_conf.py  main.py  pyproject.toml  utils.py
backend/agents/: __init__.py  builder_manager.py  merger_agent.py  planning_agent.py  utils.py
backend/agents/builders/: mcp_tool_builder.py  py_tool_builder.py  yaml_agent_writer.py
backend/app/: __init__.py  logging.py  main.py  settings.py
backend/app/api/: __init__.py  audit.py  auth.py  builds.py  compatibility.py  health.py  marketplace.py  ollabridge.py  projects.py  runs.py  secrets.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  audit.py  project.py  run.py  user.py
backend/app/middleware/: audit.py
backend/app/runs/: __init__.py  bus.py  engine.py
backend/app/secrets/: __init__.py  base.py  factory.py  memory.py  vault.py
backend/app/security/: __init__.py  deps.py  jwt.py  oauth.py
backend/app/telemetry/: __init__.py  bootstrap.py
backend/tests/: conftest.py  test_api.py  test_audit.py  test_auth.py  test_builds.py  test_compatibility.py  test_health.py  test_marketplace.py  test_ollabridge.py  test_projects.py  test_runs.py  test_secrets.py
complete-solution-plan/: index.html
deploy/helm/: README.md
docs/: architecture.md  backend.md  complete-solution-plan.md  frameworks.md  frontend-guide.md  frontend-realization-plan.md  gitpilot-integration.md  index.md  installation.md  mcp-01.md  platform.md  production-readiness.md  release-process.md  usage.md  wizard-compatibility-design.md  wizard-orchestration-patterns-design.md
docs/matrix-engine/: ai-coder-adapters.md  blueprint-candidates.md  ci-self-compliance.md  compatibility-matrix.md  contracts.md  controlled-blueprint-compiler.md  current-state-audit.md  http-api.md  matrix-bundle-export.md  matrixhub-publishing.md  mb-cli.md  public-engine-api.md  quickstart.md  repo-boundary.md  ruslan-magana-definitions.md  standards-loader.md  upgrade-roadmap.md  validation-and-repair.md
e2e/mobile/: README.md
frameworks/: index.html
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  README.md  audit.py  index.html  nginx.conf  package-lock.json  package.json  shoot.py  vite.config.ts
frontend-guide/: index.html
frontend-realization-plan/: index.html
gitpilot-integration/: index.html
hf/: .gitignore  Dockerfile  README.md  requirements.txt
hf/agent_generator_pkg/: README.md  pyproject.toml
hf/agent_generator_pkg/src/agent_generator/: __init__.py  cli.py  config.py  wsgi.py
hf/agent_generator_pkg/src/agent_generator/application/: build_service.py  release_service.py
hf/agent_generator_pkg/src/agent_generator/data/: default_prompts.yaml
hf/agent_generator_pkg/src/agent_generator/frameworks/: __init__.py  base.py
hf/agent_generator_pkg/src/agent_generator/frameworks/crewai/: __init__.py  generator.py
hf/agent_generator_pkg/src/agent_generator/frameworks/crewai_flow/: __init__.py  generator.py
hf/agent_generator_pkg/src/agent_generator/frameworks/langgraph/: __init__.py  generator.py
hf/agent_generator_pkg/src/agent_generator/frameworks/react/: __init__.py  generator.py
hf/agent_generator_pkg/src/agent_generator/frameworks/watsonx_orchestrate/: __init__.py  generator.py
hf/agent_generator_pkg/src/agent_generator/integrations/: matrixlab_client.py
hf/agent_generator_pkg/src/agent_generator/models/: agent.py  task.py  workflow.py
hf/agent_generator_pkg/src/agent_generator/planners/: llm_planner.py
hf/agent_generator_pkg/src/agent_generator/providers/: __init__.py  base.py  watsonx_provider.py
hf/agent_generator_pkg/src/agent_generator/renderers/: base.py  crewai_renderer.py  langgraph_renderer.py  packaging.py
hf/agent_generator_pkg/src/agent_generator/tools/catalog/: file_writer.py.j2  http_client.py.j2  sql_query.py.j2  vector_search.py.j2  web_search.py.j2
hf/agent_generator_pkg/src/agent_generator/utils/: parser.py
hf/agent_generator_pkg/src/agent_generator/validators/: pipeline.py  python_validator.py  spec_validator.py  yaml_validator.py
hf/agent_generator_pkg/src/agent_generator/web/: __init__.py
hf/agent_generator_pkg/src/agent_generator/web/routes/: api.py
hf/agent_generator_pkg/src/agent_generator/web/templates/: base.html  plan.html
installation/: index.html
mcp-01/: index.html
observability/: README.md  docker-compose.yaml  otel-collector-config.yaml  prometheus.yaml  tempo.yaml
platform/: index.html
production-readiness/: index.html
release-process/: index.html
scripts/: acceptance.py  check_matrix_engine_baseline.py  ci_helpers.sh  generate_diagram.py  install_python.sh  pin_github_actions.py
search/: search_index.json
shells/desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
shells/desktop/src-tauri/capabilities/: default.json
shells/desktop/src-tauri/icons/: .gitkeep
shells/desktop/src-tauri/src/: deeplink.rs  lib.rs  main.rs  menu.rs  tray.rs
tests/: conftest.py  test_application.py  test_artifact_bundle.py  test_cli.py  test_cli_integration.py  test_e2e_matrix_contract.py  test_engine_api.py  test_matrix_connection.py  test_mb_cli_l1.py  test_mb_sync_l2.py  test_mcp_server_mcp01.py  test_models.py  test_parser.py  test_planning_agent.py  test_release_build.py  test_security_validator.py  test_spec_generators.py  test_watsonx_provider.py  to_test_models.py  to_test_timing.py  to_test_timing_workflow.py
usage/: index.html
wizard-compatibility-design/: index.html
wizard-orchestration-patterns-design/: index.html
(+466 files in other folders)
